[gd_scene load_steps=4 format=2]

[ext_resource path="res://Image-assets/game_manager_fill.png" type="Texture" id=1]
[ext_resource path="res://Scripts/supervisor.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="supervisor" type="Panel"]
margin_left = 36.0
margin_top = 179.642
margin_right = 364.0
margin_bottom = 243.642
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 167.697, 243.202, 182.197 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 35.4376, 363.848, 99.2795, 142.0 ]
}

[node name="avatar" type="Sprite" parent="."]
position = Vector2( 31.0434, 33.064 )
scale = Vector2( 0.251844, 0.244969 )
texture = ExtResource( 1 )

[node name="titleLabel" type="Label" parent="."]
margin_left = 63.2795
margin_top = 2.55539
margin_right = 189.279
margin_bottom = 16.5554
text = "[TITLE]"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="descriptionLabel" type="Label" parent="."]
margin_left = 63.2795
margin_top = 21.2045
margin_right = 189.28
margin_bottom = 35.2045
rect_pivot_offset = Vector2( 63.6904, 3.65025 )
text = "[description]"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="costLabel" type="Label" parent="."]
margin_left = 63.2795
margin_top = 41.0
margin_right = 78.2795
margin_bottom = 72.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "[cost]"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="costCoinsLabel" type="Label" parent="costLabel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 12.9
margin_top = 8.0
margin_right = 46.9
margin_bottom = 22.0
rect_pivot_offset = Vector2( 40.0005, 14 )
text = "coins"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buyInvisible" type="Button" parent="."]
margin_top = 2.0
margin_right = 304.0
margin_bottom = 63.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="buyInvisible" to="." method="_on_buyInvisible_pressed"]
